tests/negative/typecheck/args-few.orng
fn main() -> Int
    let x: (b:Int) = ()
    4